--- a/src/styles/custom.module.css
+++ b/src/styles/custom.module.css
@@ -40,17 +40,32 @@
 }
 
 /* custom.module.css */
-.imageContainer {
+/* .imageContainer {
   width: fit-content;
   height: 70px;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 
 .imageContainer img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+
+/* Tailwind CSS or custom CSS */
+.img-responsive {
+  width: 100%; /* Ensures the image spans the full width of its container */
+  height: auto; /* Maintains aspect ratio */
+  object-fit: cover; /* Ensures the image covers the container without stretching */
+}
+
+/* In your custom.module.css */
+.imageContainer {
+  width: 100%; /* Make sure the container uses full width */
+  height: auto; /* Adjust height based on content */
+  overflow: hidden; /* Hide overflow if needed */
 }
