--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,3 +42,35 @@ body {
     max-width: 100vw;
     overflow-x: hidden;
 }
+
+.whatsapp-button {
+    position: fixed;
+    bottom: 20px;
+    right: 35px;
+    width: 50px;
+    height: 50px;
+    background-color: #25D366;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    transition: width 0.3s, height 0.3s;
+}
+
+@media (max-width: 768px) {
+    .whatsapp-button {
+        width: 40px;
+        height: 40px;
+        right: 30px;
+    }
+}
+
+@media (max-width: 480px) {
+    .whatsapp-button {
+        width: 35px;
+        height: 35px;
+        right: 20px;
+    }
+}
